--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Daniel McCann, WIP</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi. I'm Dan.</h1>
+				<p>Why are you here now? I'm not finished. Come back some other time. <a href="/about">This is an about page that doesn't exist yet.</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:danjm30@gmail.com">email</a></li>
+        		<li><a href="https://github.com/mccannd">github.com/mccannd</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
